dark mode fix

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -1,6 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@variant dark (&:where(.dark, .dark *));
+
+:root {
+  --accentOrange: theme(colors.accentOrange);
+}
 
 /* From Uiverse.io by Cevorob */ 
 .burger {
@@ -71,4 +76,49 @@
   font-family: "Montserrat";
   src: url('/fonts/Montserrat.woff2') format('woff2');
   font-display: swap;
+}
+
+.button {
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  display: inline-block;
+  text-align: center;
+  font-weight: bold;
+  padding: 0.7em 2em;
+  border: 3px solid var(--accentOrange);
+  border-radius: 2px;
+  color: var(--accentOrange);
+  position: relative;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1);
+  text-decoration: none;
+  transition: 0.3s ease all;
+  z-index: 1;
+}
+
+.button:before {
+  transition: 0.5s all ease;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  right: 50%;
+  bottom: 0;
+  opacity: 0;
+  content: '';
+  background-color: var(--accentOrange);
+  z-index: -1;
+}
+
+.button:hover, button:focus {
+  color: white;
+}
+
+.button:hover:before, button:focus:before {
+  transition: 0.5s all ease;
+  left: 0;
+  right: 0;
+  opacity: 1;
+}
+
+.button:active {
+  transform: scale(0.9);
 }
